--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
 .music {
   position: absolute;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
   height: 100%;
   width: 100%;
   background: linear-gradient(-45deg , #ee7752 , #e73c7e , #23a6d5 , #23d5ab);
