Added linkedin and github links to navbar

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   height: 100%;
   width: 100%;
   background: linear-gradient(-45deg , #ee7752 , #e73c7e , #23a6d5 , #23d5ab);
+  /*background: linear-gradient(-45deg , #ff7aa2 , #f20089 , #b100e8 , #b8c0ff);*/
   background-size: 400% 400%;
   animation: gradient 15s  ease infinite;
 }
