--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -11,12 +11,11 @@
     grid-template-columns: repeat(4 , 1fr);
     grid-template-rows: repeat(3 , 1fr);
     grid-gap: 15px;
-    
 }
 
 
 .grid-item {
-    background: #294051;
+    background: #355070;
     color: #fff;
     font-weight: bold;
     display: flex;
@@ -27,7 +26,9 @@
 
 .grid-item:hover {
     transition: 300ms;
-    background: transparent;
+    background: #fff;
+    color: #355070;
+    cursor: pointer;
 }
 
 #face {
@@ -60,7 +61,7 @@
     grid-column: 3 / span 1;
 }
 
-#easteregg {
+#hobbies {
     grid-row: 2 / span 1;
     grid-column: 3 / span 1;
 }
